[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/UI/Level_Select_Button.png" type="Texture" id=1]
[ext_resource path="res://art/UI/Level_Select_Button_Pressed.png" type="Texture" id=2]
[ext_resource path="res://OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/UI/Level_Locked.png" type="Texture" id=4]
[ext_resource path="res://scripts/LevelButton.gd" type="Script" id=5]
[ext_resource path="res://art/Levels/Overlays/Level1Overlay.png" type="Texture" id=6]

[sub_resource type="Theme" id=1]
/fonts/v = null

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 1
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 33
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
/fonts/v = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -1080.0
margin_right = 128.0
margin_bottom = -952.0
script = ExtResource( 5 )

[node name="LevelButton" type="TouchScreenButton" parent="."]
z_index = 10
normal = ExtResource( 1 )
pressed = ExtResource( 2 )
action = "1"

[node name="LevelText" type="Label" parent="LevelButton"]
margin_right = 128.0
margin_bottom = 128.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_outline_modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_fonts/font = SubResource( 6 )
text = " 1"

[node name="ProgressText" type="Label" parent="LevelButton"]
margin_left = 65.0
margin_top = 88.0
margin_right = 129.0
margin_bottom = 130.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_outline_modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="LevelLocked" type="Sprite" parent="LevelButton"]
z_index = 2
texture = ExtResource( 4 )
offset = Vector2( 64, 64 )

[node name="LevelOverlay" type="Sprite" parent="LevelButton"]
position = Vector2( 53, 53 )
scale = Vector2( 0.178, 0.178 )
z_index = 1
texture = ExtResource( 6 )
offset = Vector2( 64, 64 )
